Fix calendar display after maintaince mode

Clear the bulk action quick search filter when leaving the
maintaince mode, so that all events are shown in the calendar
and not only the filtered ones.

BUG: 263874